--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rpi-driver/matrix"]
 	path = rpi-driver/matrix
 	url = https://github.com/hzeller/rpi-rgb-led-matrix.git
+[submodule "rpi-driver/json"]
+	path = rpi-driver/json
+	url = https://github.com/nlohmann/json
